--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="⚡ Lightning Corporation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lightninglabs.pl/" />
+    <meta property="og:description" content="Revolutionizing tech with dog-powered intelligence and luxurious innovation." />
+    <meta property="og:site_name" content="Lightning Corporation" />
+    <meta property="og:image" content="https://lightninglabs.pl/assets/icon.webp" />
     <title>Lightning Corporation</title>
     <link rel="stylesheet" href="out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
