--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 <div class="h-20 w-20 rounded-full flex items-center justify-center ">
                                     <img src="assets/icon.webp">
                                 </div>
-                                <span class="logo-text text-6xl text-white">
+                                <span class="logo-text text-4xl text-white">
                                     <span class="moving-text lightning-text bg-gradient-to-r from-red-500 via-sky-50 to-yellow-300 bg-clip-text text-transparent">LIGHTNING</span> CORPORATION
                                 </span>
                         </div>
@@ -414,7 +414,7 @@
             </p>
         </div>
         
-        <div class="bg-black bg-opacity-50 rounded-2xl p-8 md:p-12 border border-gray-800">
+        <div class="bg-gray-900 bg-opacity-50 rounded-2xl p-8 md:p-12 border border-gray-800">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="text-center">
                     <div class="h-20 w-20 bg-red-500 rounded-full flex items-center justify-center mx-auto mb-6">
