--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     Where innovation bites back—and the net never recovers.
                 </sub>
                 <span class="text-center text-gray-300 mb-8 text-xl">Join the minds behind the machine.<br> into the Lightning State before the world catches up. Secrets, drops, and a front-row seat to the takeover.</span>
-                <a class="try-button py-3 px-8 border-2 rounded-lg border-sky-200 hover: border-2 rounded-lg border-sky-200 shadow-[0_0_2px_#fff,inset_0_0_2px_#fff,0_0_5px_#08f,0_0_15px_#08f,0_0_30px_#08f] transition-all duration-300 transform hover:scale-105">
+                <a href="https://discord.com" traget="_blank" class="try-button py-3 px-8 border-2 rounded-lg border-sky-200 hover: border-2 rounded-lg border-sky-200 shadow-[0_0_2px_#fff,inset_0_0_2px_#fff,0_0_5px_#08f,0_0_15px_#08f,0_0_30px_#08f] transition-all duration-300 transform hover:scale-105">
                     <span class="lightning-text bg-gradient-to-r from-blue-300 via-sky-50 to-yellow-300 bg-clip-text text-transparent">NOW</span>
                 </a>
             </div>
