--- a/index.html
+++ b/index.html
@@ -112,9 +112,15 @@
                         <span>Advanced memory and learning</span>
                     </li>
                 </ul>
-                <button class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded transition-all duration-300">
+                <!-- <button class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded transition-all duration-300">
                     Learn More
-                </button>
+                </button>-->
+                <h2 class="text-4xl text-center text-red-500 font-bold mb">
+                    PRODUCT DISCONTINUED
+                </h2>
+                <h1 class="text-center text-xs text-gray-400">
+                    DUE TO THE TECHNICAL REASONS
+                </h1>
             </div>
             
             <!-- Lightning Booster Card -->
